# jokes-on-you

./: README.md  pyproject.toml
jokes_on_you/: __init__.py  __main__.py  app.py  platform_lock.py  screenshot.py  trap_window.py
jokes_on_you/assets/: README.md
