[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jokes-on-you"
version = "0.1.0"
description = "Decoy-screen prank trap: fakes an unlocked desktop, then reveals Uncle Sam on any input."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "yuhuang" }]
dependencies = [
    "PySide6>=6.5",
    "mss>=9.0",
    "Pillow>=10.0",
]

[project.scripts]
joy = "jokes_on_you.__main__:main"

[tool.setuptools.packages.find]
include = ["jokes_on_you*"]

[tool.setuptools.package-data]
jokes_on_you = ["assets/*"]
